	wrap_pthread_cond_signal): New macros and functions.

	* src/cerebrod/Makefile.am: Fix dynamic module symbol problems.

	* src/cerebrod/cerebrod_listener.c
	(_cerebrod_listener_initialization),
	src/cerebrod/cerebrod_updown.c (_cerebrod_updown_initialization),
	src/cerebrod/cerebrod.c (main): Fix pthread logic problem with
	condition variables.

2005-03-15  Albert Chu  <chu11@llnl.gov>

	Begin support of updown server.

	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c
	(_cerebrod_config_parse,
	_cerebrod_pre_calculate_configuration_config_check): Add updown
	configuration support.

	* src/cerebrod/cerebrod_updown.h, src/cerebrod/cerebrod_updown.c: New files.

	Misc
	
	* src/libcommon/wrappers.c: Added mountains of additional error
	checks and debug info output.

	* src/cerebrod/cerebrod_listener.c
	(_cerebrod_listener_initialize): Initialize hash base on
	clusterlist numnodes count.

	* etc/Makefile.am, etc/cerebrod: New files.

	* configure.ac: Generate etc/Makefile.

	* Makefile.am: Add etc subdir.

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c (_Free,
	List_count, wrap_list_count): New macros and functions.

	* src/cerebrod/cerebrod_clusterlist_hostsfile.c
	(hostsfile_clusterlist_init, hostsfile_clusterlist_finish): Rework
	using _Free.

	* src/cerebrod/cerebrod_clusterlist_hostsfile.c (_all): Removed function.

	* src/cerebrod/cerebrod_listener.c
	(_cerebrod_listener_initialize, _rehash): Rework using _Free.

	* src/cerebrod/cerbrod_updown.c
	(_cerebrod_listener_dump_cluster_node_data_hash): Remove
	Hash_count use, use cluster_data_hash_numnodes instead.

	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c
	(_cerebrod_config_parse, _cerebrod_config_default): Added
	additional server debugging configuration flags.

	* src/cerebrod/cerebrod_speaker.c, src/cerebrod/cerebrod_listen.c,
	src/cerebrod_updown.c: Fix debug output based on new configuration
	parameters.

2005-03-14  Albert Chu  <chu11@llnl.gov>
